fix luong paraphase